Added saving/restoring of window positions of VST editor dialogs.

--- a/Help/Readme.html
+++ b/Help/Readme.html
@@ -22,9 +22,7 @@
         <br>
         <br> The change log and new releases can also be found on GitHub:
         <br>
-        <a href="https://github.com/Falcosoft/vstdriver/releases" target="_blank">https://github.com/Falcosoft/vstdriver/releases</a>
-        <br>
-      </p>
+      <a href="https://github.com/Falcosoft/vstdriver/releases" target="_blank">https://github.com/Falcosoft/vstdriver/releases</a></p>     
       <p>&nbsp;</p>
       <p>If you would like to support the development of VST MIDI Driver (Falcomod) you can donate through PayPal.</p>
       <form action="https://www.paypal.com/cgi-bin/webscr" method="get" target="_blank">
@@ -221,15 +219,20 @@
             <img src="play.png" style="position: absolute; top: 144px; left: 204px; border:0px;" alt="FSMP + VST Midi driver - 32 channel KONAMI Midi files">
           </a>
       </div>
-      </p>      
-
-      <p>&nbsp;</p>
-      <p>Have fun.</p>
+      </p>
+      <p><br>
+      Have fun.</p>
       <p>Zolt&aacute;n Bacsk&oacute; (Falco)</p>
       <p><br>
         <a href="https://falcosoft.hu" target="_blank">https://falcosoft.hu/</a>
       </p>
       <p>zbacsko@falcosoft.hu</p>
+      <br>
+      <p>
+		Ps: One of the best free all around VST2 instrument plugins is S-YXG50.<br>
+		It's a very good replacement for the Windows default MS GS Soft Synth and it works perfectly with this driver: <br>
+		<a href="https://veg.by/en/projects/syxg50/" target="_blank">https://veg.by/en/projects/syxg50/</a>
+      </p>
       <p>&nbsp;</p>
       <table width="100%" border="0">
         <tr>
