ReadMe fixes and source formatting

--- a/Help/Readme.html
+++ b/Help/Readme.html
@@ -43,7 +43,7 @@
         <li>4. VSTi editor dialog can be shown and used when a port is activated. </li>
         <li>5. Default waveout output mode has no dependency on Bass library so it can be used with Midi clients that use Bass.</li>
         <li>6. ASIO output mode with fully configurable ASIO channel selection (4-channel audio mode is also supported).</li>
-        <li>7. Automatic 32-channel/dual port mode when used together with Falcosoft Soundfont Midi Player (FSMP).</li>
+        <li>7. Automatic 32-channel/dual port mode when used together with <a href="https://falcosoft.hu/softwares.html#midiplayer" target="_blank">Falcosoft Soundfont Midi Player (FSMP)</a>.</li>
         <li>8. Improved high DPI compatibility.</li>
         <li>9. Supports running status. </li>
         <li>10. Supports midiOutSetVolume (MIDICAPS_VOLUME).
@@ -73,7 +73,7 @@
             Windows. The only problem is that some plugins are sample rate dependent or work best with a particular sample
             rate. E.g. S-YXG50 works best only with 44100/48000 Hz. On other frequencies it produces bad output (most noticeable
             at 32000 and 192000 Hz , but 96000 Hz is alo problematic). Munt VSTi has the most proper timing on 32000 Hz.
-            OPL3 plugins has the best emulation accuracy at 49716 Hz. Of course in these cases the emulation accuracy is
+            OPL3 plugins have the best emulation accuracy at 49716 Hz. Of course in these cases the emulation accuracy is
             more important than some resampling. Generally 48000 Hz is the most compatible one.</p>
         </li>
         <li>
@@ -122,7 +122,7 @@
             the offset from port A for the channel pair of port B.
             <br> You can use FSMP or Midi Trail to play back 32-channel Midi files where Midi channels 1-16 can be played on
             port A and Midi channels 17-32 on port B.
-            <br> Besides 32-channel Midi playback you can also use 4 channel audio option also for gaming. E.g. if you assign
+            <br> Besides 32-channel Midi playback you can also use 4 channel audio option for gaming. E.g. if you assign
             DosBox Midi to port B then game music would sound from rear speakers while normal game audio/digital effects
             from front speakers. </p>
         </li>
@@ -142,7 +142,7 @@
           Storage of settings: </strong>
       </p>
       <p>The driver settings are stored in the registry at HKEY_CURRENT_USER\Software\VSTi Driver. The plugin settings are stored
-        in the plugin's folder with the same name as the plugin dll but with the extension of.set.</p>
+        in the plugin's folder with the same name as the plugin dll but with the extension of .set.</p>
       <p> Some rare to be changed driver settings have no options available on the GUI but can be changed directly from the registry
         if necessary:</p>
       <p>1.
