Added handling of multiple plugins.
1. User is able to pre-configure 10 VSTi plugins in the configuration dialog and switch between the plugins at runtime with the help of the tray menu.

--- a/Help/Readme.html
+++ b/Help/Readme.html
@@ -59,7 +59,8 @@
         <li>14. Fixed high latency problem (500 ms) of Arakula's fork.</li>
         <li>15. Fixed ASIO related instabilities of DB50XG's fork. </li>
         <li>16. Fixed dual port related problems of DB50XG's fork.</li>
-        <li>17. Added system tray menu. <strong><br>
+        <li>17. Added system tray menu. </li>
+        <li>18. Added management of 10  plugins at once and switching between them at runtime (tray menu). <strong><br>
         </strong>        </li>
       </ul>
 
@@ -137,9 +138,9 @@
           dialogs.</p>
         </li>
         <li>
-          <p><strong>System tray menu</strong>: Even if you do not select the 'Show VST dialog when port is activated' option you can still open (and close) VST editor dialogs with the help of the system tray menu. From this menu you can also send GM/GS/XG/GM2 SysEx reset messages to active VSTi plugin instances. This way you can set your preferred Midi mode or simply reset the plugin to corresponding defaults even if the used Midi client has no such feature. 
-            <br>
-          </p>
+          <p><strong>System tray menu</strong>: Even if you do not select the 'Show VST dialog when port is activated' option you can still open (and close) VST editor dialogs with the help of the system tray menu. From this menu you can also send GM/GS/XG/GM2 SysEx reset messages to active VSTi plugin instances. This way you can set your preferred Midi mode or simply reset the plugin to corresponding defaults even if the used Midi client has no such feature.<br>
+            From version 2.2. you can also switch between pre-configured plugins from the tray menu. <br>
+        </p>
         </li>
       </ol>
       <p>
